[project]
name = "braincrafthmi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Kelly", email = "davek032@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "adafruit-blinka>=8.69.0",
    "adafruit-circuitpython-bmp280>=3.3.9",
    "adafruit-circuitpython-display-shapes>=2.10.4",
    "adafruit-circuitpython-display-text>=4.0.2",
    "adafruit-circuitpython-dotstar>=2.2.19",
    "adafruit-circuitpython-httpserver>=4.7.1",
    "adafruit-circuitpython-motor>=3.4.18",
    "adafruit-circuitpython-rgb-display>=3.14.3",
    "adafruit-circuitpython-st7789>=2.1.3",
    "lgpio>=0.2.2.0",
]

[project.scripts]
braincrafthmi = "braincrafthmi:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
